# colrev-asreview

./: .colrev_endpoints.json  .pre-commit-config.yaml  README.md  colrev_asreview.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
colrev_asreview/: .colrev_endpoints.json  __init__.py  colrev_asreview.py
tests/: asreview_test.py  conftest.py
