[tool.poetry]
name = "colrev-asreview"
version = "0.1.0"
description = ""
authors = ["Gerit Wagner <gerit.wagner@uni-bamberg.de>, Julian Prester <julian@julianprester.com>"]
readme = "README.md"
include = [".colrev_endpoints.json"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
# TODO: change to official repo
colrev = {git = "https://tmahmood@github.com/tmahmood/colrev.git", rev = "asreview_refactor"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
