[tool.poetry]
name = "colrev-asreview"
version = "0.1.0"
description = ""
authors = ["Gerit Wagner <gerit.wagner@uni-bamberg.de>, Julian Prester <julian@julianprester.com>"]
readme = "README.md"
include = [".colrev_endpoints.json"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
asreview = "^1.2"
# TODO: change to official repo
colrev = {git = "https://tmahmood@github.com/tmahmood/colrev.git", rev = "asreview_refactor"}
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^6.5.0"
types-click = "^7.1.8"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry>=1.2.0b1", "poetry-core"]
build-backend = "poetry.core.masonry.api"
